syntax = "proto3";

package sec07;
option java_multiple_files = true;
option java_package = "com.ayur.models.sec07";


/*
server emits 1-100 very fast.
We want to control the rate in which the server emits based on the client's processing speed and (vice-versa).
This process is called back-pressure handling / flow control
*/

message Output {
  int32 value = 1;
}

message RequestSize {
  int32 size = 1;
}

service FlowControlService {
  rpc GetMessages(stream RequestSize) returns (stream Output);
}